new app attempt starting with just getting one plot up for both bubble and bar and then will try to get it to respond to listener events :(

--- a/index.html
+++ b/index.html
@@ -23,33 +23,9 @@
         <div class="well">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset" onchange="optionChanged(this.value)"> -->
-            <select id="selDataset" onchange="getData(this.value)">
-            <option value="940">User 940</option>
-            <option value="941">User 941</option>
-            <option value="943">User 943</option>
-            <option value="944">User 944</option>
-            <option value="945">User 945</option>
-            <option value="946">User 946</option>
-            <option value="947">User 947</option>
-            <option value="948">User 948</option>
-            <option value="949">User 949</option>
-            <option value="950">User 950</option>
-            <option value="952">User 952</option>
-            <option value="953">User 953</option>
-            <option value="954">User 954</option>
-            <option value="955">User 955</option>
-            <option value="956">User 956</option>
-            <option value="958">User 958</option>
-            <option value="959">User 959</option>
-            <option value="960">User 960</option>
-            <option value="961">User 961</option>
-            <option value="962">User 962</option>
-            <option value="963">User 963</option>
-            <option value="964">User 964</option>
-            <option value="966">User 966</option>
-            <option value="967">User 967</option>
-            <!-- "962", "963", "964", "966", "967", "968", "969", "970", "971", "972", "973", "974", "975", "978", "1233", "1234", "1235", "1236", "1237", "1238", "1242", "1243", "1246", "1253", "1254", "1258", "1259", "1260", "1264", "1265", "1273", "1275", "1276", "1277", "1278", "1279", "1280", "1281", "1282", "1283", "1284", "1285", "1286", "1287", "1288", "1289", "1290", "1291", "1292", "1293", "1294", "1295", "1296", "1297", "1298", "1308", "1309", "1310", "1374", "1415", "1439", "1441", "1443", "1486", "1487", "1489", "1490", "1491", "1494", "1495", "1497", "1499", "1500", "1501", "1502", "1503", "1504", "1505", "1506", "1507", "1508" -->
-          </select>
+            <!-- <select id="selDataset" onchange="getData(this.value)"> -->
+              <select id="selDataset">
+                </select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -74,7 +50,7 @@
 
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
+  <script src="./static/js/app3.js"></script>
   <script src="./static/js/bonus.js"></script>
   <script src="samples.json"></script>
   
